Added Method functions and couple of functions and data function in Asyncronous Infinite Scroll

--- a/async-infinite-scroll/index.html
+++ b/async-infinite-scroll/index.html
@@ -16,10 +16,37 @@
 			// The el property points to the DOM using a query selector
 			el: "app",
 
-			date(){
+			data(){
 				return {
 					bottom: false,
 					beers: []
+				}
+			},
+
+			method(){
+				bottomVisible(){
+					const scrollY = window.scrollY
+					const visible = document.documentElement.clientHeight
+					const pageHeight = document.documentElement.scrollHeight
+					return bottomOfPage || pageHeight < visbible
+				},
+				addBeer(){
+					axios.get('https://api.punkapi.com/v2/beers/random')
+					.then(response => {
+						let api = response.data[0];
+						let apiInfo = {
+							name: api.name,
+							desc: api.description,
+							img: api.image_url,
+							tips: api.brewers_tips,
+							tagline: api.tagline,
+							food: api.food_pairing
+						};
+						this.beers.push(apiInfo)
+						if (this.bottomVisible()){
+							this.addBeer()
+						}
+					})
 				}
 			}
 		});
