--- a/async-infinite-scroll/index.html
+++ b/async-infinite-scroll/index.html
@@ -3,6 +3,78 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Async Infinite Scroll</title>
+
+	<style>
+		
+
+body {
+  font-family: 'Archivo Narrow', sans-serif;
+  background: #ffb3ff;
+}
+
+h1, h2, h3, h4 {
+  font-family: 'Spectral SC', serif;
+}
+
+h1 {
+  margin-top: 40px;
+  color: #000000;
+  text-align: center;
+}
+
+.loading {
+  color: #e6e6e6;
+  text-align: center;
+  font-size: 20px;
+}
+
+.display {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+}
+
+#app {
+  @extend .display;
+  flex-direction: column;
+}
+
+.beer-contain {
+  @extend .display;
+  width: 50%;
+  margin: 20px 24%;
+  box-shadow: 0 2px 3px 1px rgba(30, 0, 0, 0.1);
+}
+
+.beer-img {
+  @extend .display;
+  padding: 30px;
+  background: #99ddff;
+  border: 1px solid #88498F;
+  border-right: 1px solid #f44822;
+}
+
+.beer-info {
+  background: #5c8a8a;
+  color: white;
+  padding: 30px;
+  border: 1px solid #88498F;
+  .bright {
+    color: #fcd7cf;
+    font-family: 'Roboto Condensed', sans-serif;
+  }
+}
+
+h3 {
+  margin-bottom: 5px;
+}
+
+ul {
+  margin-top: 5px;
+}
+
+		
+	</style>
 </head>
 <body>
 
