Final time counter

--- a/vue-typewriter/index.html
+++ b/vue-typewriter/index.html
@@ -12,23 +12,20 @@
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
         crossorigin="anonymous">
   <style>
-    /* Code commented out for brevity */
+    .correct {
+      color: rgb(63, 81, 181);
+      font-size: 22px;
+    }
+    .typo {
+      color: #f00;
+      font-size: 22px;
+    }
     .timer {
       font-size: 100px;
       text-align: center;
       color: white;
       border-radius: 100;
-      background-color: white
-    }
-
-    .correct {
-      color: rgb(63, 81, 181);
-      font-size: 22px;
-    }
-
-    .typo {
-      color: #f00;
-      font-size: 22px;
+      background-color: green;
     }
   </style>
   <title>Vue Typer</title>
@@ -52,17 +49,17 @@
                     v-model="typedText"></textarea>
         </div>
       </div>
-      <div class="col-4 display-2 text-danger">
-        <div class="btn btn-primary btn-block" @click="reset()">Reset</div>
+      <div class="col-4">
+        <button class="btn btn-primary btn-block"
+                @click="reset">Reset</button>
         <div class="timer mt-3">
-            {{timer}}
+          {{ timer }}
         </div>
         <div class="scoreboard mt-3">
           <h2>Scoreboard</h2>
           <div class="scores">
-            <div class="alert-info mt-2">1. 20WPM, 45 Typos</div>
-            <div class="alert-info mt-2">2. 20WPM, 45 Typos</div>
-            <div class="alert-info mt-2">3. 20WPM, 45 Typos</div>
+            <div class="alert-info mt-2"
+                 v-for="(score, index) in sortedScores">{{index + 1}}. {{score.wpm}} WPM, {{score.typos}} Typos </div>
           </div>
         </div>
       </div>
